# quasistatic-contact-SLS

./: README.md  index.html
bindings/generated_docstrings/: BUILD.bazel  geometry.h  geometry_proximity.h  geometry_query_results.h  math.h  multibody_quasidynamic.h  solvers.h
bindings/pydrake/: BUILD.bazel
bindings/pydrake/geometry/: geometry_py_common.cc  geometry_py_scene_graph.cc
bindings/pydrake/geometry/test/: common_test.py  scene_graph_test.py
bindings/pydrake/math/: _math_extra.py  math_py_monolith.cc
bindings/pydrake/math/test/: math_test.py
bindings/pydrake/multibody/: BUILD.bazel  all.py  quasidynamic_py.cc
bindings/pydrake/multibody/test/: quasidynamic_test.py
bindings/pydrake/solvers/: BUILD.bazel  solvers_py.cc  solvers_py.h  solvers_py_conic.cc
bindings/pydrake/solvers/test/: solve_conic_program_test.py
examples/planning_through_contact/: allegro_hand_cube.ipynb  linear_pusher.ipynb  planar_iiwa_box.ipynb  planar_iiwa_bucket_collision.ipynb  planar_iiwa_bucket_with_table.ipynb
examples/planning_through_contact/algorithms/: BUILD.bazel  __init__.py  fast_sls.py  iterative_lqr.py  iterative_sls.py  iterative_to.py  model_predictive_controller.py  traj_opt_problem.py
examples/planning_through_contact/algorithms/test/: fast_sls_test.py  iterative_lqr_test.py  iterative_sls_test.py  iterative_to_test.py  traj_opt_problem_test.py
examples/planning_through_contact/experiment/: iiwa_hardware.py  planar_iiwa_bucket.ipynb  realsense_hardware.py
examples/planning_through_contact/models/: allegro_hand.py  iiwa.py
examples/planning_through_contact/models/allegro_hand_meshes/: link_12.0.gltf
geometry/: BUILD.bazel  shape_2d_specification.cc  shape_2d_specification.h
geometry/proximity/: BUILD.bazel  calc_proximity.cc  calc_proximity.h
geometry/proximity/test/: calc_proximity_test.cc
geometry/query_results/: signed_distance_pair.h
geometry/test/: shape_2d_specification_test.cc
math/: BUILD.bazel  rigid_transform_2d.cc  rigid_transform_2d.h
math/test/: rigid_transform_2d_test.cc
multibody/quasidynamic/: BUILD.bazel  quasidynamic_differentiable_contact_model.cc  quasidynamic_differentiable_contact_model.h  quasidynamic_linear_pusher.cc  quasidynamic_linear_pusher.h  quasidynamic_multibody_plant.cc  quasidynamic_multibody_plant.h  quasidynamic_planar_plant.cc  quasidynamic_planar_plant.h
multibody/quasidynamic/test/: quasidynamic_differentiable_contact_model_test.cc  quasidynamic_linear_pusher_test.cc  quasidynamic_multibody_plant_test.cc  quasidynamic_planar_plant_test.cc
multibody/quasidynamic/test_utilities/: BUILD.bazel  eval_quasidynamic_differentiable_contact_model.cc  eval_quasidynamic_differentiable_contact_model.h
solvers/: BUILD.bazel  solve_conic_program.cc  solve_conic_program.h
solvers/test/: solve_conic_program_test.cc
static/css/: index.css
tools/install/libdrake/: build_components.bzl
